// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render edit post 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <nav
          class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top"
        >
          <a
            class="navbar-brand"
            href="/"
          >
            <img
              alt="Home"
              src="/favicon.ico"
            />
          </a>
          <button
            class="navbar-toggler"
            data-target="#navbarNavDropdown"
            data-toggle="collapse"
            type="button"
          >
            <span
              class="navbar-toggler-icon"
            />
          </button>
          <div
            class="collapse navbar-collapse"
            id="navbarNavDropdown"
          >
            <ul
              class="navbar-nav"
            >
              <li
                class="nav-item active"
              >
                <a
                  class="nav-link"
                  href="/products"
                >
                  products
                </a>
              </li>
              <li
                class="nav-item "
              >
                <a
                  class="nav-link"
                  href="/uses"
                >
                  uses
                </a>
              </li>
              <li
                class="nav-item "
              >
                <a
                  class="nav-link"
                  href="/recipes"
                >
                  recipes
                </a>
              </li>
            </ul>
          </div>
        </nav>
        <form
          enctype="multipart/form-data"
        >
          <div
            class="form-group "
          >
            <label
              for="title"
            >
              Title For Post
            </label>
            <input
              class="form-control"
              id="title"
              name="title"
              required=""
              type="text"
              value="postTitle"
            />
            <div
              class="text-help"
            />
          </div>
          <div
            class="card"
          >
            <h3>
              Existing Image
            </h3>
            <p>
              click delete to remove the image or select a new image to replace it
            </p>
            <button
              class="btn btn-danger"
            >
              Delete
            </button>
            <img
              alt="post image"
              class="post-edit-img"
              src="http://localhost:3000/images/postImage"
            />
          </div>
          <div>
            <label>
              Image
            </label>
            <div>
              <input
                accept=".jpg, .png, .jpeg"
                type="file"
              />
            </div>
          </div>
          <div
            class="form-group "
          >
            <label
              for="content"
            >
              Post Content
            </label>
            <textarea
              class="form-control"
              id="content"
              name="content"
            >
              postContent
            </textarea>
            <div
              class="text-help"
            />
          </div>
          <button
            class="btn btn-primary"
            type="submit"
          >
            Submit
          </button>
          <a
            class="btn btn-secondary"
            href="/products/a"
          >
            Cancel
          </a>
          <button
            class="btn btn-danger float-right"
          >
            Delete Post
          </button>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <nav
        class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top"
      >
        <a
          class="navbar-brand"
          href="/"
        >
          <img
            alt="Home"
            src="/favicon.ico"
          />
        </a>
        <button
          class="navbar-toggler"
          data-target="#navbarNavDropdown"
          data-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse"
          id="navbarNavDropdown"
        >
          <ul
            class="navbar-nav"
          >
            <li
              class="nav-item active"
            >
              <a
                class="nav-link"
                href="/products"
              >
                products
              </a>
            </li>
            <li
              class="nav-item "
            >
              <a
                class="nav-link"
                href="/uses"
              >
                uses
              </a>
            </li>
            <li
              class="nav-item "
            >
              <a
                class="nav-link"
                href="/recipes"
              >
                recipes
              </a>
            </li>
          </ul>
        </div>
      </nav>
      <form
        enctype="multipart/form-data"
      >
        <div
          class="form-group "
        >
          <label
            for="title"
          >
            Title For Post
          </label>
          <input
            class="form-control"
            id="title"
            name="title"
            required=""
            type="text"
            value="postTitle"
          />
          <div
            class="text-help"
          />
        </div>
        <div
          class="card"
        >
          <h3>
            Existing Image
          </h3>
          <p>
            click delete to remove the image or select a new image to replace it
          </p>
          <button
            class="btn btn-danger"
          >
            Delete
          </button>
          <img
            alt="post image"
            class="post-edit-img"
            src="http://localhost:3000/images/postImage"
          />
        </div>
        <div>
          <label>
            Image
          </label>
          <div>
            <input
              accept=".jpg, .png, .jpeg"
              type="file"
            />
          </div>
        </div>
        <div
          class="form-group "
        >
          <label
            for="content"
          >
            Post Content
          </label>
          <textarea
            class="form-control"
            id="content"
            name="content"
          >
            postContent
          </textarea>
          <div
            class="text-help"
          />
        </div>
        <button
          class="btn btn-primary"
          type="submit"
        >
          Submit
        </button>
        <a
          class="btn btn-secondary"
          href="/products/a"
        >
          Cancel
        </a>
        <button
          class="btn btn-danger float-right"
        >
          Delete Post
        </button>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": Object {
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
    Symbol(observable): [Function],
  },
  "unmount": [Function],
}
`;

exports[`render new post 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <nav
          class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top"
        >
          <a
            class="navbar-brand"
            href="/"
          >
            <img
              alt="Home"
              src="/favicon.ico"
            />
          </a>
          <button
            class="navbar-toggler"
            data-target="#navbarNavDropdown"
            data-toggle="collapse"
            type="button"
          >
            <span
              class="navbar-toggler-icon"
            />
          </button>
          <div
            class="collapse navbar-collapse"
            id="navbarNavDropdown"
          >
            <ul
              class="navbar-nav"
            >
              <li
                class="nav-item active"
              >
                <a
                  class="nav-link"
                  href="/products"
                >
                  products
                </a>
              </li>
              <li
                class="nav-item "
              >
                <a
                  class="nav-link"
                  href="/uses"
                >
                  uses
                </a>
              </li>
              <li
                class="nav-item "
              >
                <a
                  class="nav-link"
                  href="/recipes"
                >
                  recipes
                </a>
              </li>
            </ul>
          </div>
        </nav>
        <form
          enctype="multipart/form-data"
        >
          <div
            class="form-group "
          >
            <label
              for="title"
            >
              Title For Post
            </label>
            <input
              class="form-control"
              id="title"
              name="title"
              required=""
              type="text"
              value=""
            />
            <div
              class="text-help"
            />
          </div>
          <div>
            <label>
              Image
            </label>
            <div>
              <input
                accept=".jpg, .png, .jpeg"
                type="file"
              />
            </div>
          </div>
          <div
            class="form-group "
          >
            <label
              for="content"
            >
              Post Content
            </label>
            <textarea
              class="form-control"
              id="content"
              name="content"
            />
            <div
              class="text-help"
            />
          </div>
          <button
            class="btn btn-primary"
            type="submit"
          >
            Submit
          </button>
          <a
            class="btn btn-secondary"
            href="/products/a"
          >
            Cancel
          </a>
        </form>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <nav
        class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top"
      >
        <a
          class="navbar-brand"
          href="/"
        >
          <img
            alt="Home"
            src="/favicon.ico"
          />
        </a>
        <button
          class="navbar-toggler"
          data-target="#navbarNavDropdown"
          data-toggle="collapse"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="collapse navbar-collapse"
          id="navbarNavDropdown"
        >
          <ul
            class="navbar-nav"
          >
            <li
              class="nav-item active"
            >
              <a
                class="nav-link"
                href="/products"
              >
                products
              </a>
            </li>
            <li
              class="nav-item "
            >
              <a
                class="nav-link"
                href="/uses"
              >
                uses
              </a>
            </li>
            <li
              class="nav-item "
            >
              <a
                class="nav-link"
                href="/recipes"
              >
                recipes
              </a>
            </li>
          </ul>
        </div>
      </nav>
      <form
        enctype="multipart/form-data"
      >
        <div
          class="form-group "
        >
          <label
            for="title"
          >
            Title For Post
          </label>
          <input
            class="form-control"
            id="title"
            name="title"
            required=""
            type="text"
            value=""
          />
          <div
            class="text-help"
          />
        </div>
        <div>
          <label>
            Image
          </label>
          <div>
            <input
              accept=".jpg, .png, .jpeg"
              type="file"
            />
          </div>
        </div>
        <div
          class="form-group "
        >
          <label
            for="content"
          >
            Post Content
          </label>
          <textarea
            class="form-control"
            id="content"
            name="content"
          />
          <div
            class="text-help"
          />
        </div>
        <button
          class="btn btn-primary"
          type="submit"
        >
          Submit
        </button>
        <a
          class="btn btn-secondary"
          href="/products/a"
        >
          Cancel
        </a>
      </form>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "store": Object {
    "dispatch": [Function],
    "getState": [Function],
    "replaceReducer": [Function],
    "subscribe": [Function],
    Symbol(observable): [Function],
  },
  "unmount": [Function],
}
`;
